--- a/Quiron.LojaVirtual.Web/Views/Vitrine/ListaProdutos.cshtml
+++ b/Quiron.LojaVirtual.Web/Views/Vitrine/ListaProdutos.cshtml
@@ -1,4 +1,5 @@
 ﻿@model Quiron.LojaVirtual.Web.Models.ProdutosViewModel
+@using Quiron.LojaVirtual.Web.HtmlHelpers
 
 @*
     Varrer os produtos:
@@ -11,3 +12,5 @@
         <h3>@p.Preco.ToString("c")</h3>
     </div>
 }
+@*Paginação:*@
+@Html.PageLinks(Model.Paginacao, x => Url.Action("ListaProdutos", new  { pagina = x}))
